<resources>
    <string name="app_name">Votapp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="image_logo">Logo Votapp</string>
    <string name="login">Login</string>
    <string name="icon_user">Username</string>
    <string name="icon_pass">Password</string>

    <!-- Menu drawer strings -->
    <string name="title_activity_home">Home</string>

    <string name="menu_option1">Encuestas</string>
    <string name="menu_option2">Ayuda</string>
    <string name="menu_option3">Configuracion</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="votappLogoHome">Votapp Consultor</string>
    <string name="image_home">Home</string>
    <string name="icon_optEncuesta">Encuestas</string>

    <string name="title_activity_encuesta">Nueva Opinion</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sumbit">Alta Opinion</string>
    <string name="title_activity_ayuda">ayuda</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iptext">IP</string>
    <string name="puertotext">Puerto</string>
    <string name="httpstext">Https ?</string>
    <string name="savetext">Guardar</string>
    <string name="configtext">Configuración</string>
</resources>
