<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Login">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            style="@style/image_login"
            android:id="@+id/login_image_logo"
            android:contentDescription="@string/image_logo"
            android:src="@drawable/votapp_logo" />

        <LinearLayout
            style="@style/layout_input"
            android:orientation="horizontal">

            <ImageView
                style="@style/image_icons"
                android:id="@+id/image_user"
                android:contentDescription="@string/icon_user"
                android:src="@drawable/user_font_awesome" />

            <EditText
                style="@style/inputStyle"
                android:id="@+id/username"
                android:inputType="text"
                android:hint="@string/username_hint"/>
        </LinearLayout>

        <LinearLayout
            style="@style/layout_input"
            android:orientation="horizontal">

            <ImageView
                style="@style/image_icons"
                android:id="@+id/image_password"
                android:contentDescription="@string/icon_pass"
                android:src="@drawable/lock_font_awesome" />

            <EditText
                style="@style/inputStyle"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:hint="@string/password_hint"/>
        </LinearLayout>

        <Button
            style="@style/buttonLogin"
            android:text="@string/login"
            android:id="@+id/button_login"
            android:background="@drawable/button_radius"
            android:onClick="onClickLogin" />

    </LinearLayout>

</RelativeLayout>
