<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.votapp.fede.votapp.views.fragments.ip">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/configtext"
            android:id="@+id/textView4"
            android:textStyle="bold"
            android:layout_marginBottom="15dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/iptext"
            android:id="@+id/textView2"
            android:textStyle="bold" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:ems="10"
            android:id="@+id/new_ip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/puertotext"
            android:id="@+id/textView3"
            android:textStyle="bold" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:ems="10"
            android:id="@+id/new_port" />

        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/httpstext"
            android:id="@+id/check_https"
            android:textStyle="bold" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/savetext"
            android:id="@+id/button"
            android:onClick="onClickGuardarConfiguracion" />
    </LinearLayout>

</FrameLayout>
